--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bulma": "^0.9.3",
+    "moment": "^2.29.1",
     "next": "12.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
